terraform/build_ec2/modules/security_group/main.tf
resource "aws_security_group" "mainly_security_group" {
    name = "final_evaluation_desafiolatam"
    description = "final_evaluation_desafiolatam"
    vpc_id = var.mainly_vpc_id


    ingress  {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
  
}
